--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body ng-controller="mainCtrl">
 
-  
+
   <div ui-view="main"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js" charset="utf-8"></script>
@@ -14,6 +14,7 @@
     <script src="./js/app.js" charset="utf-8"></script>
     <script src="./js/mainCtrl.js" charset="utf-8"></script>
     <script src="./js/mainService.js" charset="utf-8"></script>
+    <script src="./views/landing/landingCtrl.js" charset="utf-8"></script>
     <script src="./views/login/loginCtrl.js" charset="utf-8"></script>
     <script src="./views/profile/profileCtrl.js" charset="utf-8"></script>
   </body>
