--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.js"></script>
     <script src="./js/app.js" charset="utf-8"></script>
     <script src="./js/mainCtrl.js" charset="utf-8"></script>
     <script src="./js/mainService.js" charset="utf-8"></script>
     <script src="./views/landing/landingCtrl.js" charset="utf-8"></script>
     <script src="./views/login/loginCtrl.js" charset="utf-8"></script>
+    <script src="./views/signUp/signUpCtrl.js" charset="utf-8"></script>
     <script src="./views/profile/profileCtrl.js" charset="utf-8"></script>
   </body>
 </html>
