fixed instantiation error. Needs database setup

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,6 @@
     <script src="./views/login/loginCtrl.js" charset="utf-8"></script>
     <script src="./views/signUp/signUpCtrl.js" charset="utf-8"></script>
     <script src="./views/profile/profileCtrl.js" charset="utf-8"></script>
+    <script src="./views/purchaseTokens/purchaseTokensCtrl.js" charset="utf-8"></script>
   </body>
 </html>
