--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <script src="./js/app.js" charset="utf-8"></script>
     <script src="./js/mainCtrl.js" charset="utf-8"></script>
     <script src="./js/mainService.js" charset="utf-8"></script>
+    <script src="./views/employeeSide/employeeSideCtrl.js" charset="utf-8"></script>
+    <script src="./views/employerSide/employerSideCtrl.js" charset="utf-8"></script>
     <script src="./views/landing/landingCtrl.js" charset="utf-8"></script>
     <script src="./views/login/loginCtrl.js" charset="utf-8"></script>
     <script src="./views/signUp/signUpCtrl.js" charset="utf-8"></script>
