added simple styling to profile page

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="jobSite">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.0.0/sweetalert2.css">
     <title></title>
   </head>
