--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,6 @@
     <script src="./views/signUp/signUpCtrl.js" charset="utf-8"></script>
     <script src="./views/profile/profileCtrl.js" charset="utf-8"></script>
     <script src="./views/purchaseTokens/purchaseTokensCtrl.js" charset="utf-8"></script>
+    <script src="./partials/editModal/editModal.js" charset="utf-8"></script>
   </body>
 </html>
