--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./styles/xeditable.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.0.0/sweetalert2.css">
     <title></title>
   </head>
@@ -14,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-xeditable/0.4.0/js/xeditable.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.0.0/sweetalert2.js" charset="utf-8"></script>
     <script src="./js/app.js" charset="utf-8"></script>
     <script src="./js/mainCtrl.js" charset="utf-8"></script>
